# semantic-zoom

./: .gitignore  CLAUDE.md  PHASE3_AUDIT_REPORT.md  README.md  create-issues.sh  demo_pipeline.py  pyproject.toml
docs/: phase2-linguistic-audit.md
src/semantic_zoom/: models.py  pipeline.py
src/semantic_zoom/phase1/: dependency_parser.py  pos_tagger.py  tokenizer.py  triple_extractor.py
src/semantic_zoom/phase2/: __init__.py  adjective_order.py  adverb_tier.py  noun_person.py  verb_tense.py
src/semantic_zoom/phase3/: __init__.py  discourse_adverbs.py  focusing_adverbs.py  integration.py  preposition_symbols.py
src/semantic_zoom/phase4/: __init__.py  framenet_assignment.py  plan_description.py  slot_filling.py
src/semantic_zoom/phase5/: __init__.py  edges.py  inter_frame.py  morphisms.py  (+1 more)
tests/: test_pipeline.py
tests/phase1/: test_dependency_parser.py  test_pos_tagger.py  test_tokenizer.py  test_triple_extractor.py
tests/phase2/: test_adjective_ordering.py  test_adverb_tiers.py  test_person_classification.py  test_tense_classification.py
tests/phase3/: test_discourse_adverbs.py  test_focusing_adverbs.py  test_integration.py  test_preposition_mapping.py
tests/phase4/: test_frame_assignment.py  test_plan_description.py  test_slot_filling.py
tests/phase5/: test_edge_creation.py  test_inter_frame.py  test_morphism_attachment.py  test_node_creation.py
tests/phase6/: test_seed_selection.py  test_sparse_render.py  test_subgraph_extraction.py
tests/phase7/: test_ambiguity_detection.py  test_grammar_check.py  test_preservation.py  test_user_prompts.py
(+8 files in other folders)
