[project]
name = "semantic-zoom"
version = "0.1.0"
description = "Quasi-deterministic semantic zoom via NLP triple decomposition with categorical morphisms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "networkx>=3.2.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
